ui/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - name: http
    port: 80
    targetPort: http
